# pythagorean-walks-on-z2

./: .gitignore  PythagoreanWalks.lean  README.md  goal.md  lake-manifest.json  lakefile.toml  prover.md  pyproject.toml
PythagoreanWalks/: Certificate.lean
data/: horizontal_axis_certificates.json  shared_leg_residue_coverage.md
experiments/: pythagorean_walks.py  render_eli5_gif.py
notes/: pythagorean-walks-axis-subproblem.md  pythagorean-walks-full-conjecture-progress.md  verification-changelog.md
papers/: pythagorean-walks-on-z2.md  pythagorean-walks-progress-report.md
rust/pythagorean_walks_fast/: Cargo.toml
rust/pythagorean_walks_fast/src/: lib.rs
tests/: test_pythagorean_walks.py  test_pythagorean_walks_fast.py
